--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
       "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
       "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-	  "@nomicfoundation/hardhat-verify": "^2.0.1",
+      "@nomicfoundation/hardhat-verify": "^2.0.1",
       "@nomicfoundation/ignition-core": "^0.15.5",
       "@typechain/ethers-v6": "^0.5.0",
       "@typechain/hardhat": "^9.0.0",
@@ -32,7 +32,7 @@
       "@types/mocha": ">=9.1.0",
       "@types/node": ">=18.0.0",
       "chai": "^4.3.6",
-      "eslint": "8.7.0",
+      "eslint": "^9.11.1",
       "globals": "^15.9.0",
       "hardhat": "^2.22.7",
       "hardhat-contract-sizer": "^2.10.0",
