adding economy cache script

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,12 @@ PRIVATE_KEY=
 #LAZY_STAKING_PERIOD_FOR_BONUS=30
 #LAZY_STAKING_HODL_BONUS=25
 #LAZY_STAKING_MAX_BONUS_PERIODS=8
+
+## LAZY ECONOMY CACHE
+LAZY_STAKING_CONTRACT_ID=0.0.7221488
+LAZY_STAKING_ENV=mainnet
+LAZY_STAKING_CACHE_TABLE=
+STAKING_CACHE_SUPRESS_LOGS=true
+DIRECTUS_DB_URL=
+DIRECTUS_TOKEN=
 ```
